--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Paah</string>
+    <string name="paah_timer">Paah Timer</string>
+    <string name="start">Start</string>
+    <string name="sensitivity">Sensitivity</string>
 </resources>
